# manga-notifierr

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-build-publish-ghcr.yaml
deploy/: compose.yaml
src/: _logger.py  environment.py  flaresolverr_helper.py  main.py  notifier.py
src/media_sources/: fmteam.py  mangamoins.py
src/media_sources/mangaplus/: __init__.py  response_pb2.py
